--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
 asgiref==3.6.0
 async-timeout==4.0.2
+autopep8==2.0.1
 certifi==2022.12.7
 charset-normalizer==2.1.1
 click==8.1.3
 Django==4.1.4
 django-dotenv==1.4.2
+gunicorn==20.1.0
 idna==3.4
 mypy-extensions==0.4.3
 pathspec==0.10.3
 platformdirs==2.6.0
+pycodestyle==2.10.0
 redis==4.4.0
 requests==2.28.1
 six==1.16.0
