--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,174 @@
+alabaster==0.7.12
+appdirs==1.4.4
+apturl==0.5.2
+argon2-cffi==21.1.0
 asgiref==3.6.0
 async-timeout==4.0.2
+attrs==21.2.0
 autopep8==2.0.1
+Babel==2.8.0
+backcall==0.2.0
+beautifulsoup4==4.10.0
+beniget==0.4.1
+bleach==4.1.0
+blinker==1.4
+brial==1.0.2
+Brlapi==0.8.3
+Brotli==1.0.9
 certifi==2022.12.7
+cffi==1.15.1
+chardet==4.0.0
 charset-normalizer==2.1.1
-click==8.1.3
+click==8.0.3
+colorama==0.4.4
+command-not-found==0.3
+cryptography==38.0.4
+cupshelpers==1.0
+cycler==0.11.0
+cypari2==2.1.2
+Cython==0.29.28
+dbus-python==1.2.18
+decorator==4.4.2
+defer==1.0.6
+defusedxml==0.7.1
+Deprecated==1.2.13
+distlib==0.3.4
+distro==1.7.0
+distro-info===1.1build1
 Django==4.1.4
-django-dotenv==1.4.2
+docutils==0.17.1
+entrypoints==0.4
+filelock==3.6.0
+fonttools==4.29.1
+fpylll==0.5.2.dev0
+fs==2.4.12
+gast==0.5.2
+gmpy2==2.1.2
 gunicorn==20.1.0
+html5lib==1.1
+httplib2==0.20.2
 idna==3.4
-mypy-extensions==0.4.3
-pathspec==0.10.3
-platformdirs==2.6.0
+imagesize==1.3.0
+importlib-metadata==4.6.4
+ipykernel==6.7.0
+ipython==7.31.1
+ipython_genutils==0.2.0
+ipywidgets==6.0.0
+jedi==0.18.0
+jeepney==0.7.1
+Jinja2==3.0.3
+jsonschema==3.2.0
+jupyter-client==7.1.2
+jupyter-core==4.9.1
+jupyterlab-pygments==0.1.2
+keyring==23.5.0
+kiwisolver==1.3.2
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+louis==3.20.0
+lxml==4.8.0
+lz4==3.1.3+dfsg
+macaroonbakery==1.3.1
+MarkupSafe==2.0.1
+matplotlib==3.5.1
+matplotlib-inline==0.1.3
+memory-allocator==0.1.2
+more-itertools==8.10.0
+mpmath==0.0.0
+nbclient==0.5.6
+nbconvert==6.4.0
+nbformat==5.1.3
+nest-asyncio==1.5.4
+netifaces==0.11.0
+networkx==2.4
+nexmo==2.5.2
+notebook==6.4.8
+numpy==1.21.5
+oauthlib==3.2.0
+olefile==0.46
+packaging==21.3
+pandocfilters==1.5.0
+parso==0.8.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.0.1
+pkgconfig==1.5.5
+platformdirs==2.5.1
+pluggy==0.13.0
+ply==3.11
+pplpy==0.8.7
+primecountpy==0.1.0
+prometheus-client==0.9.0
+prompt-toolkit==3.0.28
+protobuf==3.12.4
+ptyprocess==0.7.0
+py==1.10.0
+pycairo==1.20.1
 pycodestyle==2.10.0
+pycparser==2.21
+pycups==2.0.1
+Pygments==2.11.2
+PyGObject==3.42.1
+PyJWT==2.6.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pyparsing==2.4.7
+pyRFC3339==1.1
+pyrsistent==0.18.1
+pyTelegramBotAPI==4.8.0
+python-apt==2.3.0+ubuntu2.1
+python-dateutil==2.8.1
+python-debian===0.1.43ubuntu1
+pythran==0.10.0
+pytz==2022.7
+pyxdg==0.27
+PyYAML==5.4.1
+pyzmq==22.3.0
 redis==4.4.0
+reportlab==3.6.8
 requests==2.28.1
+roman==3.3
+rpy2==3.4.5
+sagemath-standard==9.5
+sagenb-export==3.2
+scipy==1.8.0
+screen-resolution-extra==0.0.0
+SecretStorage==3.3.1
+Send2Trash==1.8.1b0
 six==1.16.0
+snowballstemmer==2.2.0
+soupsieve==2.3.1
+Sphinx==4.3.2
 spotipy==2.22.0
 sqlparse==0.4.3
+sympy==1.9
+systemd-python==234
+terminado==0.13.1
+testpath==0.5.0
+toml==0.10.2
 tomli==2.0.1
+tornado==6.1
+tox==3.21.4
+traitlets==5.1.1
+twilio==7.16.0
+tzlocal==2.1
+ubuntu-advantage-tools==27.12
+ubuntu-drivers-common==0.0.0
+ufoLib2==0.13.1
+ufw==0.36.1
+unattended-upgrades==0.1
+unicodedata2==14.0.0
 urllib3==1.26.13
+virtualenv==20.13.0+ds
+vonage==3.1.0
+wadllib==1.3.6
+wcwidth==0.2.5
+webencodings==0.5.1
+whitenoise==6.2.0
+widgetsnbextension==2.0.0
+wrapt==1.14.1
+xdg==5
+xkit==0.0.0
+zipp==1.0.0
