--- a/requirements.txt
+++ b/requirements.txt
@@ -4,17 +4,34 @@ certifi==2022.12.7
 charset-normalizer==2.1.1
 click==8.1.3
 Django==4.1.7
+django-cors-headers==4.2.0
 django-dotenv==1.4.2
+EasyProcess==1.1
+entrypoint2==1.1
 gunicorn==20.1.0
 idna==3.4
+jeepney==0.8.0
+keyboard==0.13.5
+MouseInfo==0.1.3
+mss==9.0.1
 mypy-extensions==0.4.3
 pathspec==0.10.3
+Pillow==9.5.0
 platformdirs==2.6.0
 postgres==4.0
-protobuf>=3.20.2
+protobuf==4.23.0
 psycopg2-binary==2.9.5
 psycopg2-pool==1.1
+PyAutoGUI==0.9.54
 pycodestyle==2.10.0
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pyperclip==1.8.2
+PyRect==0.2.0
+pyscreenshot==3.1
+PyScreeze==0.1.29
+python3-xlib==0.15
+pytweening==1.0.7
 redis==4.4.0
 requests==2.28.1
 six==1.16.0
