--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2022.12.7
 charset-normalizer==2.1.1
 click==8.1.3
 Django==4.1.7
+django-cors-headers==4.2.0
 django-dotenv==1.4.2
 EasyProcess==1.1
 entrypoint2==1.1
@@ -31,11 +32,11 @@ pyscreenshot==3.1
 PyScreeze==0.1.29
 python3-xlib==0.15
 pytweening==1.0.7
-redis==5.0.0
-requests==2.31.1
+redis==4.4.0
+requests==2.28.1
 six==1.16.0
 spotipy==2.22.1
-sqlparse==0.4.4
+sqlparse==0.4.3
 tomli==2.0.1
 urllib3==1.26.13
 whitenoise==6.2.0
